[package]
name = "stylus-workshop-nft"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["arbitrum", "ethereum", "stylus", "alloy"]
description = "Stylus workshop NFT template"

[dependencies]
alloy-primitives = "0.3.1"
alloy-sol-types = "0.3.1"
stylus-sdk = { version = "0.4.1", default-features = false }
hex = "0.4.3"
wee_alloc = "0.4.5"
base64 = { version = "0.21.4", default-features = false, features = ["alloc"] }
hex-literal = "0.4.1"
crc = "3.0.1"
adler = { version = "1.0.2", default-features = false }
fastrand = { version = "2.0.0", default-features = false }

[features]
export-abi = ["stylus-sdk/export-abi"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[dev-dependencies]
flate2 = "1.0.27"
hex = "0.4.3"
png = "0.17.10"
rand = "0.8.5"
